fixed overflow + navbar toggling view

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -426,6 +426,7 @@ button:focus {
   .navbar-toggle {
     display: block;
     margin: 15px;
+    background-color: #fff !important;
   }
 
   .navbar-brand {
